--- a/banking.html
+++ b/banking.html
@@ -15,7 +15,7 @@
     <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto">
         <div class="bg-green-400 rounded p-8">
         <h3 class="text-2xl">Deposit</h3>
-        <h4 class="text-4xl">$00</h4>
+        <h4 class="text-4xl">$ <span id="deposit-total">00</span> </h4>
         </div>
         <div class="bg-teal-400 rounded p-8">
         <h3 class="text-2xl">withdraw</h3>
@@ -23,7 +23,7 @@
         </div>
         <div class="bg-lime-400 rounded p-8">
         <h3 class="text-2xl">Balance</h3>
-        <h4 class="text-4xl">$500</h4>
+        <h4 class="text-4xl">$ <span id="balance-total">500</span> </h4>
         </div>
     </div>
 </section>
@@ -34,7 +34,7 @@
             <h4>Please Deposit</h4>
             <div>
                 <form action="">
-                    <input id="user-email" class="border-2 rounded-r-lg block w-3/4	mb-4" type="text" placeholder="$amount you want to deposit">
+                    <input id="deposit-input" class="border-2 rounded-r-lg block w-3/4	mb-4" type="text" placeholder="$amount you want to deposit">
                     
                     <button id="deposit-btn" class="bg-yellow-700 rounded px-4 py-2 font-medium text-white">Deposit</button>
                 </form>
@@ -57,11 +57,6 @@
 
 
 
-
-
-
-
-
-    <script src="app.js"></script>
+ <script src="banking.js"></script>
 </body>
 </html>
