--- a/banking.html
+++ b/banking.html
@@ -19,7 +19,7 @@
         </div>
         <div class="bg-teal-400 rounded p-8">
         <h3 class="text-2xl">withdraw</h3>
-        <h4 class="text-4xl">$00</h4>
+        <h4 class="text-4xl">$ <span id="withdraw-total">00</span></h4>
         </div>
         <div class="bg-lime-400 rounded p-8">
         <h3 class="text-2xl">Balance</h3>
@@ -44,7 +44,7 @@
             <h4>Please withdraw</h4>
             <div>
                 <form action="">
-                    <input id="user-email" class="border-2 rounded-r-lg block w-3/4	mb-4" type="text" placeholder="$amount you want to withdraw">
+                    <input id="withdraw-input" class="border-2 rounded-r-lg block w-3/4	mb-4" type="text" placeholder="$amount you want to withdraw">
                     
                     <button id="withdraw-btn" class="bg-yellow-700 rounded px-4 py-2 font-medium text-white">withdraw</button>
                 </form>
